--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Node JS</title>
+
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    <h1>GIT demo Page</h1>
+    <h1 class="bg">GIT demo Page</h1>
     <script src="assets/js/app.js"></script>
 
     
