--- a/index.html
+++ b/index.html
@@ -4,16 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <title>Node JS</title>
 
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    <h1 class="bg">GIT demo Page</h1>
-    <h2 class="bg">Hello world</h2>
-    <h3 class="bg">Hi</h3>
-    <h4 class="bg">HAHAHA</h4>
-    <h5 class="bg">It works WOW</h5>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 center"><h1>This is center</h1></div>
+            <div class="alumni-details col-lg-12" id="alumni"></div>
+        </div>
+    </div>
+
     <script src="assets/js/app.js"></script>
 
     
